# KintaMed_Edge

./: .gitignore  README.md  bridge.py  inspect_model.py  inspect_onnx.py  merge_models.py  model_info.txt  pubspec.yaml
android/: build.gradle.kts  force_arm64.gradle
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/kotlin/com/auramed/auramed_edge/: MainActivity.kt
docs/: PRIVACY_POLICY.md  PRIVACY_POLICY_de.md  PRIVACY_POLICY_es.md  PRIVACY_POLICY_fr.md  PRIVACY_POLICY_it.md  PRIVACY_POLICY_pt.md  TERMS_OF_SERVICE.md  TERMS_OF_SERVICE_de.md  TERMS_OF_SERVICE_es.md  TERMS_OF_SERVICE_fr.md  TERMS_OF_SERVICE_it.md  TERMS_OF_SERVICE_pt.md
ios/: Podfile
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/ai/: medgemma_bridge.dart  model_manager.dart
lib/core/database/: database_service.dart
lib/core/localization/: app_localizations.dart
lib/core/theme/: app_theme.dart
lib/core/utils/: pdf_generator.dart
lib/cpp/: CMakeLists.txt  medgemma_inference.cpp
lib/cpp/libs/x64/: libonnxruntime.so.1
lib/features/history/data/providers/: history_providers.dart
lib/features/history/presentation/: history_detail_screen.dart  history_screen.dart
lib/features/home/presentation/: home_screen.dart
lib/features/intake/presentation/: intake_screen.dart
lib/features/legal/presentation/: consent_controller.dart  consent_dialog.dart  legal_screen.dart
lib/features/settings/presentation/: settings_controller.dart  settings_screen.dart
lib/features/triage/data/repositories/: triage_repository.dart
lib/features/triage/domain/entities/: triage_entities.dart
lib/features/triage/presentation/: triage_chat_controller.dart  triage_controller.dart  triage_screen.dart
linux/: CMakeLists.txt
linux/cpp/: CMakeLists.txt
linux/cpp/libs/x64/: libonnxruntime-genai.so.0
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: triage_logic_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/cpp/: CMakeLists.txt
windows/cpp/libs/arm64/: onnxruntime-genai.lib
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
